--- a/final.html
+++ b/final.html
@@ -25,14 +25,11 @@
 
         <h2>Achievements</h2>
 
-        <label for="course">Progress in this course (100%)</label>
-        <progress id="course" value="100" max="100"> 100% </progress>
-        <br>
-        <label for="capstone">Progress in the Specialization capstone (20%)</label>
-        <progress id="capstone" value="20" max="100"> 20% </progress>
-        <br>
-        <label for="life">Progress in life goals (75%) </label>
-        <progress id="life" value="75" max="100"> 75% </progress>
+        <p>
+            Progress in this course (100%)<progress id="course" value="100" max="100"> 100% </progress><br>
+            Progress in the Specialization capstone (20%)<progress id="capstone" value="20" max="100"> 20% </progress><br>
+            Progress in life goals (75%)<progress id="life" value="75" max="100"> 75% </progress>
+        </p>
 
         <h2>More About Me</h2>
         <details>
