--- a/final.html
+++ b/final.html
@@ -15,33 +15,39 @@
         </nav>    
     </header>
     <main>
-        <h2>Favorite Foods</h2>
-        <ul>
-            <li>Steak</li>
-            <li>General Tso's Chicken</li>
-            <li>Parmesan Chicken</li>
-            <li>Chocolate Cake</li>
-        </ul>
+        <section>
+            <h2>Favorite Foods</h2>
+            <ul>
+                <li>Steak</li>
+                <li>General Tso's Chicken</li>
+                <li>Parmesan Chicken</li>
+                <li>Chocolate Cake</li>
+            </ul>
+        </section>
 
-        <h2>Achievements</h2>
+        <section>
+            <h2>Achievements</h2>
+            <p>
+                Progress in this course (100%)<progress id="course" value="100" max="100"> 100% </progress><br>
+                Progress in the Specialization capstone (20%)<progress id="capstone" value="20" max="100"> 20% </progress><br>
+                Progress in life goals (75%)<progress id="life" value="75" max="100"> 75% </progress>
+            </p>
+        </section>
 
-        <p>
-            Progress in this course (100%)<progress id="course" value="100" max="100"> 100% </progress><br>
-            Progress in the Specialization capstone (20%)<progress id="capstone" value="20" max="100"> 20% </progress><br>
-            Progress in life goals (75%)<progress id="life" value="75" max="100"> 75% </progress>
-        </p>
-
+        <section>
         <h2>More About Me</h2>
-        <details>
-            <summary>My Childhood</summary>
-            <p>I grew up in a town near Detroit that isn't Ann Arbor.</p>
-        </details>
+            <details>
+                <summary>My Childhood</summary>
+                <p>I grew up in a town near Detroit that isn't Ann Arbor.</p>
+            </details>
+        </section>
 
         <figure>
             <img src="http://www.intro-webdesign.com/images/newlogo.png" alt="Logo for WD4E">
             This page was created by Kevin Briggs &amp; Colleen van Lent. To learn more about web design, visit 
             <a href="http://www.intro-webdesign.com">Intro to Web Design</a>.
         </figure>
+
     </main>
 </body>
 </html>
